--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 				<div class="container-fluid">
 					<div class="col-md-4">
 						<h2>Address</h2>
-						<p><a href="https://goo.gl/maps/CKrRF">4529 University Way NE</a></p>
-						<p><a href="https://goo.gl/maps/CKrRF">Seattle, WA 98105</a></p>
+						<p><a href="https://goo.gl/maps/CKrRF">4529 University Way NE<br/>Seattle, WA 98105</a></p>
 					</div>
 					<div class="col-md-4">
 						<h2>Hours</h2>
@@ -118,11 +117,10 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
-
 			<footer>
-				<p>&copy; 2014, Dawg Pizza, info@dawgpizza.com<p>
+				<p>&copy; 2014, Dawg Pizza,<a href="mailto:info@dawgpizza.com"> info@dawgpizza.com</a></p>
 				<p><a href = #>Back to Top &uarr;</a></p>
 			</footer>
-		</div>
+		</div> 
 	</main>
 </body>
